srcs/configs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx_deployment
  labels:
    app: nginx_deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx_pod
  template:
    metadata:
      labels:
        app: nginx_pod
    spec:
      containers:
      - name: nginx_pod
        image: nginx_image
        imagePullPolicy: Never
        resources:
         limits:
          memory: 512Mi
          cpu: "1"
        ports:
        - containerPort: 80
        - containerPort: 443
