srcs/configs/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx_pod
  labels:
    app: nginx_container
spec:
  containers:
  - name: nginx_container
    image: nginx
    imagePullPolicy: Never
    resources:
        limits:
         memory: 512Mi
         cpu: "1"
        requests:
          memory: 256Mi
          cpu: "0.2"
    ports:
    - containerPort: 80
    - containerPort: 443
