srcs/configs/grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  annotations:
    metallb.universe.tf/allow-shared-ip: ip
spec:
  type: LoadBalancer
  selector:
    app: grafana
  ports:
  - name: grafana
    port: 3000
    targetPort: 3000
---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: grafana-deployment
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: grafana
    template:
      metadata:
        labels:
          app: grafana
      spec:
        containers:
        - name: grafana
          image: grafana-image
          imagePullPolicy: Never
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
          - containerPort: 3000
          volumeMounts:
          - name: grafana-persistent-storage
            mountPath: /var/lib/grafana
        volumes:
        - name: grafana-persistent-storage
          persistentVolumeClaim:
            claimName: grafana-pv-claim
