srcs/configs/influx.yaml
apiVersion: v1
kind: Service
metadata:
  name: influx-service
spec:
  type: ClusterIP
  selector:
    app: influx
  ports:
  - port: 8086
    targetPort: 8086
---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: influx-deployment
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: influx
    template:
      metadata:
        labels:
          app: influx
      spec:
        containers:
        - name: influx
          image: influx-image
          imagePullPolicy: Never
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
          - containerPort: 8086
