srcs/configs/influxdb.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb-service
spec:
  type: ClusterIP
  selector:
    app: influxdb
  ports:
  - port: 8086
    targetPort: 8086
---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: influxdb-deployment
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: influxdb
    template:
      metadata:
        labels:
          app: influxdb
      spec:
        containers:
        - name: influxdb
          image: influxdb-image
          imagePullPolicy: Never
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
#          env:
#            - name: INFLUXDB_DB
#              value: "telegraf"
#            - name: INFLUXDB_ADMIN_USER
#              value: "fflores"
#            - name: INFLUXDB_ADMIN_PASSWORD
#              value: "fflores"
#            - name: INFLUXDB_ADMIN_ENABLED
#              value: "true"
#            - name: INFLUXDB_USER
#              value: "fflores"
#            - name: INFLUXDB_USER_PASSWORD
#              value: "fflores"
          ports:
          - containerPort: 8086
          volumeMounts:
          - name: influxdb-persistent-storage
            mountPath: /var/lib/influxdb
        volumes:
        - name: influxdb-persistent-storage
          persistentVolumeClaim:
            claimName: influxdb-pv-claim
