srcs/configs/phpmyadmin.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
  labels:
    app: nginx
  annotations:
    metallb.universe.tf/allow-shared-ip: ip
spec:
  type: LoadBalancer
  selector:
    app: phpmyadmin
  ports:
  - name: http
    port: 5000
    targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin-deployment
  labels:
    app: phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
      - name: phpmyadmin
        image: phpmyadmin-image
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
