srcs/configs/telegraf.yaml
apiVersion: v1
kind: Service
metadata:
  name: telegraf-service
spec:
  selector:
    app: telegraf
  ports:
  - port: 8094
    targetPort: 8094
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegraf-deployment
spec:
  selector:
    matchLabels:
      app: telegraf
  template:
    metadata:
      labels:
        app: telegraf
    spec:
      containers:
      - name: telegraf
        image: telegraf-image
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8094
