srcs/configs/test.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
  annotations:
    metallb.universe.tf/allow-shared-ip: ip
spec:
  type: LoadBalancer
  selector:
    app: test
  ports:
  - port: 555
    targetPort: 555
---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: test
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: test
    template:
      metadata:
        labels:
          app: test
      spec:
        containers:
        - name: test
          image: test-image
          imagePullPolicy: Never
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
          - containerPort: 555
