srcs/configs/wordpress_old.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  labels:
    app: wordpress
spec:
  type: ClusterIP
  selector:
    app: wordpress
  ports:
  - port: 5050
    name: http
---
#apiVersion: v1
#kind: PersistentVolumeClaim
#metadata:
#  name: wp-pv-claim
#  labels:
#    app: wordpress
#spec:
#  accessModes:
#    - ReadWriteOnce
#  resources:
#    requests:
#      storage: 2Gi
#---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: wordpress
        image: wordpress-image
        imagePullPolicy: Never
        ports:
          - containerPort: 5050
